<resources>
    <!-- Shared Preferences -->
    <string name="shared_pref_yumble">yumble_data</string>

    <!-- Globals -->
    <string name="app_name">Yumble</string>
    <string name="bullet">\u2022</string>
    <string name="big_bullet">\u25CF</string>
    <string name="placeholder">Placeholder</string>

    <!-- Main Activity -->
    <string name="placeholder_title">Cheesesteak and Fries</string>
    <string name="cook">Cook Time:</string>
    <string name="placeholder_cook">30 min</string>
    <string name="servings">Servings:</string>
    <string name="placeholder_servings">4</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="instructions_title">Instructions</string>

    <!-- Profile Activity -->
    <string name="profile_title">Your Profile</string>
    <string name="profile_name_placeholder">NucciTheBoss</string>
    <string name="profile_your_timeline">Your Timeline</string>
    <string name="profile_recipes_uploaded_title">Recipes Uploaded:</string>
    <string name="profile_upload_count_placeholder">10</string>
    <string name="profile_others_save_title">Recipes saved by others:</string>
    <string name="profile_others_count_placeholder">2</string>
    <string name="profile_recipes_saved_title">Total recipes saved:</string>
    <string name="profile_saved_count_placeholder">8</string>
    <string name="profile_recipes_reject_title">Total recipes rejected:</string>
    <string name="profile_reject_count_place_holder">2</string>
    <string name="profile_update_recipe_preferences">Update Recipe Preferences</string>

    <!-- Saved Recipes Activity -->
    <string name="recipe_button_saved">Saved</string>
    <string name="recipe_button_search">Search</string>
    <string name="recipe_button_uploads">Uploads</string>

    <string name="recipe_saved_saved_title">Your saved Recipes</string>
    <string name="recipe_saved_saved_title_access">Title banner for saved recipe page</string>
    <string name="recipe_saved_search_title">Search for a Recipe</string>
    <string name="recipe_saved_search_title_access">Title banner for search recipe page</string>
    <string name="recipe_saved_upload_title">Your uploaded Recipes</string>
    <string name="recipe_saved_upload_title_access">Title banner for uploaded recipe page</string>

    <!-- Upload Activity and Fragments -->
    <string name="upload_next_button">Next</string>
    <string name="upload_submit_button">Submit</string>
    <string name="upload_cancel_button">Cancel</string>
    <string name="upload_add_new_button_access">Add a new item</string>

    <string name="start_upload_title">Upload a New Recipe</string>
    <string name="upload_access_string_1">Upload</string>
    <string name="upload_pg1_recipe_title">Recipe Name</string>
    <string name="upload_pg1_recipe_title_hint">Buffalo Chicken Dip</string>
    <string name="upload_pg1_recipe_cook_time">Cook Time</string>
    <string name="upload_pg1_recipe_cook_time_hint">30</string>
    <string name="upload_pg1_recipe_servings">Servings</string>
    <string name="upload_pg1_recipe_servings_hint">4</string>
    <string name="upload_pg2_recipe_ingredients_title">Ingredients</string>
    <string name="upload_pg2_recipe_ingredients_hint">Mayonnaise</string>
    <string name="upload_pg3_recipe_instructions_title">Instructions</string>
    <string name="upload_pg3_recipe_instructions_hint">Preheat oven to 350\u00B0F</string>
    <string name="upload_pg4_recipe_notes_title">Any Notes for the Reader?</string>
    <string name="upload_pg4_recipe_notes_hint">Enjoy with a side of chips</string>
    <string name="upload_pg5_recipe_image_title">Take or upload a photo of your recipe</string>
    <string name="upload_pg6_recipe_submit_title">Everything look good?</string>
    <string name="upload_p6_banner_access">Title banner for submission page</string>
    <string name="notes_title">Notes</string>

    <string name="hello_blank_fragment">Hello blank fragment!</string>
</resources>
