<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragments.UploadPageTwoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/upload_p2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/upload_pg2_recipe_ingredients_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline22"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upload_next_button_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/food_red"
            android:text="@string/upload_next_button"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/upload_cancel_button_p2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/upload_cancel_button_p2"
            app:layout_constraintTop_toTopOf="@+id/upload_cancel_button_p2" />

        <Button
            android:id="@+id/upload_cancel_button_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/light_grey_background"
            android:text="@string/upload_cancel_button"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/upload_next_button_p2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="575dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/add_ingredient_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/primary_button"
            android:contentDescription="@string/upload_add_new_button_access"
            android:elevation="5dp"
            android:src="@drawable/ic_round_add_36"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline22"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:shapeAppearanceOverlay="@style/circleShape" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline22"
            app:layout_constraintTop_toTopOf="@+id/guideline25">

            <LinearLayout
                android:id="@+id/upload_ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ingredients_first_step_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="80px"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="start|top"
                    android:hint="@string/upload_pg2_recipe_ingredients_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColorHint="#757575" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>